--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
      <div class="player__controls">
        <div class="progress">
-        <div id="progress__filled"></div>
+        <div class="progress__filled"></div>
        </div>
        <button id="player__button toggle" title="Toggle Play">►</button>
        <input type="range" name="volume" id="player__slider" min="0" max="1" step="0.05" value="1">
